<resources>
    <string name="app_name">Q100 Aulas</string>
    <string name="name">Quem é você?</string>
    <string name="bt_oi">Oi</string>
    <string name="teste">oknok</string>
    <string name="novoTexto">Testando strings</string>
    <string name="aulas01_04">Aulas 01_04 - Oi</string>
    <string name="aulas05_11">Aulas 05_11 - MegaSena/Animações</string>
    <string name="aula12c">Aula 12 - Câmera</string>
    <string name="aula12w">Aula 12 - Web</string>
    <string name="aula13">Aula 13 - Drawer</string>
    <string name="aula15">Aula 15 - ChatHead</string>
    <string name="aula16a">Aula 16 - SharedPreferences</string>
    <string name="aula16b">Aula 16 - File CSV</string>
    <string name="aula17">Aula 17_18 - SQLite</string>
    <string name="aula19">Aula 19 - Service</string>
    <string name="aula20a">Aula 20 - Vibrator</string>
    <string name="aula20b">Aula 20 - Jogo com Bola</string>
    <string name="aula22">Aula 22</string>
    <string name="aula23">Aula 23 - BindService</string>
    <string name="aula24a">Aula 24 - AsyncTask</string>
    <string name="aula24b">Aula 24 - Maps</string>
    <string name="aula24c">Aula 24 - Contatos</string>
    <string name="aula25">Aula 25 - Player</string>
    <string name="megasena_label">MegaSena</string>
    <string name="company">Quaddro</string>
    <string name="carregando">Carregando…</string>
    <string name="user">Usuário</string>
    <string name="password">Sehna</string>
    <string name="lembrar">Lembrar?</string>
    <string name="acesso">Acessar</string>
    <string name="animacao">Animações</string>
    <string name="rotacionar01">Rodar 1</string>
    <string name="rotacionar02">Rodar 2</string>
    <string name="zoom01">Z 1</string>
    <string name="zoom02">Z 2</string>
    <string name="fade01">Fade 1</string>
    <string name="fade02">Fade 2</string>
    <string name="hyperspace">H Space</string>
    <string name="aula11">Aula 11 - Spinner</string>
    <string name="imagem">Imagem</string>
    <string name="video">Vídeo</string>
    <string name="imagem_cancelada">Imagem Cancelada!</string>
    <string name="video_cancelado">Vídeo Cancelado!</string>
    <string name="uri">URL</string>
    <string name="go">IR</string>
    <string name="web_back">Voltar</string>
    <string name="web_forward">ir</string>
    <string name="drawer_action">Action</string>
    <string name="drawer_open">Drawer aberto</string>
    <string name="drawer_close">Drawer</string>
    <string name="chat_head">ChatHead Título</string>
    <string name="preferencias">Prerefências</string>
    <string name="modo_viagem_resumo">Modo Viagem Detalhes</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="informe_valor_limite">Informe valor limite</string>
    <string name="valor_limite_detalhe">Valor limite detalhes</string>
    <string name="valor_limite">Valor Limite</string>
    <string name="outros">Outros</string>
    <!-- Carro -->
    <string name="carro_criar">Novo</string>
    <string name="carro_nome">Carro</string>
    <string name="carro_fabricante">Fabricante</string>
    <string name="carro_descricao">Descrição</string>
    <string name="carro_limpar">Limpar</string>
    <string name="carro_alterar">Alterar</string>
    <!-- Mensagem -->
    <string name="mensagem_criar">Nova</string>
    <string name="mensagem_nome">Mensagem</string>
    <string name="mensagem_corpo">Corpo</string>
    <string name="mensagem_limpar">Limpar</string>
    <string name="mensagem_alterar">Alterar</string>
    <string name="gps">GPS</string>
    <string name="gps_localizacao">Localização</string>
    <string name="gps_endereco">Endereço</string>
    <string name="aula21a">AULA 21 - GPS</string>
    <string name="aula21b">AULA 21 - CEP</string>
    <string name="cep_endereco">Endereço</string>
    <string name="cep">CEP</string>
    <string name="cep_buscar">Buscar</string>
    <string name="bound_exibir">Agora</string>
    <string name="bound_parar_servico">Parar Serviço</string>

    <string-array name="emails">
        <item>Casa</item>
        <item>Trabalho</item>
        <item>Outros</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="tv_espera">Espera em segundos:</string>
    <string name="bt_rodar">Executar</string>
    <string name="_5">5</string>
    <string name="mediaPrevious">Voltar</string>
    <string name="mediaPlay">Tocar</string>
    <string name="mediaNext">Próximo</string>
</resources>
