<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cep_endereco" />
    <TextView
        android:id="@+id/cep_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cep"
        android:inputType="textPostalAddress" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cep_buscar"
        android:onClick="buscar" />
</LinearLayout>