<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/carro_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="@integer/normal"
        android:inputType="text"
        android:hint="@string/carro_nome" />

    <EditText
        android:id="@+id/carro_fabricante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="@integer/normal"
        android:inputType="text"
        android:hint="@string/carro_fabricante" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carro_alterar"
            android:onClick="salvar" />
    </LinearLayout>
</LinearLayout>