<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="10pt"
        android:textColor="#444444"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="9dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/tv_espera"/>

    <Button
        android:id="@+id/bt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/bt_rodar"
        android:layout_below="@+id/tv_time"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="8pt"
        android:layout_below="@+id/bt_time"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/et_time"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_5"
        android:layout_alignTop="@+id/tv_time"
        android:layout_toEndOf="@+id/tv_time" />
</RelativeLayout>